@@ -1,5 +1,8 @@
 2017-02-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/79641
+	* c-c++-common/pr79641.c: New test.
+
 	PR tree-optimization/79649
 	* gcc.target/i386/pr79649.c: New test.
 
