@@ -1,3 +1,9 @@
+2017-02-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/79641
+	* c-attribs.c (handle_mode_attribute): Use build_qualified_type to
+	preserve quals.
+
 2017-02-17  Joseph Myers  <joseph@codesourcery.com>
 
 	* c-cppbuiltin.c (builtin_define_float_constants): Define
